clusters/agora-rke2/certmanager/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: "Host(`longhorn.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
    services:
    - name: longhorn-frontend
      port: 80
    middlewares:
    - name: redirect-middleware
      namespace: traefik-system
  tls:
    secretName: local-bnbdevelopment-hu-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: "Host(`grafana.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
    services:
    - name: prometheus-release-grafana 
      port: 80
    middlewares:
    - name: redirect-middleware
      namespace: traefik-system
  tls:
    secretName: local-bnbdevelopment-hu-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingressroute
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: "Host(`kibana.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
    services:
    - name: kibana-kibana
      port: 5601
    middlewares:
    - name: redirect-middleware
      namespace: traefik-system
  tls:
    secretName: local-bnbdevelopment-hu-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: traefik-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.local.bnbdevelopment.hu`)
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: redirect-middleware
      namespace: traefik-system
  tls:
    secretName: local-bnbdevelopment-hu-tls
